# 指定要使用的构建后端为 setuptools
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# 项目名称
name = "tools"
# 项目版本
version = "0.1.0"
# 依赖
#dependencies = [
#  "urllib3==1.26.20",
#  "prettytable==3.12.0",
#  "click==8.1.7",
#  "PyYAML==6.0.2",
#  "requests==2.32.3",
#  "pycryptodome==3.21.0",
#]
# 项目描述
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]

# 加载数据文件
[tool.setuptools.package-data]
# 加载数据文件，名称和pkg名称统一
tools = [
  "config/*.yml",
]

# 将命令安装为包的一部分
[project.scripts]
# 命令 tools 相当于 from tools.cli import cli;cli()
tools = "tools.cli:cli"